# ISEC

./: README.md
Classes/AM2/: aula2_T.txt
Classes/ME/: README.md
Classes/SO/: README.md  apontamentos.md  ex3_f4.7z  ficha7.txt  pipes_anonimos.txt
Projects/TP_BD/: ALBUM IMGUR.url  ModeloConcetual.psd  README.md  Relatorio.html  Relatorio.md  espinicial.html
Projects/TP_CR/: .project  README.md
Projects/TP_MD/: DA.mdj  DSS.mdj  INSTITUTO SUPERIOR DE ENGENHARIA DE COIMBRA.docx  MD.mdj  Ruben_Lousada_2019126176_P4_Pedro_Serrano_2016017926_P5.docx  Untitled - Cópia.mdj  corrigido.mdj  meta1.docx  meta2.docx  pedro.docx
Projects/TP_P/: CMakeLists.txt  README.md  Relatório.docx  linhas.c  linhas.h  main.c  paragens.c  paragens.h  save  utils.c  utils.h
Projects/TP_PA/: alunos.csv  candidaturas.csv  propostas.csv
Projects/TP_POO/: Bateria.cpp  Bateria.h  CMakeLists.txt  CentralEletrica.cpp  CentralEletrica.h  Controlador.cpp  Controlador.h  Deserto.cpp  Deserto.h  Edificio.cpp  Edificio.h  Floresta.cpp  Floresta.h  Fundicao.cpp  Fundicao.h  Ilha.cpp  Ilha.h  Lenhador.cpp  Lenhador.h  MinaCarvao.cpp  MinaCarvao.h  MinaFerro.cpp  MinaFerro.h  Mineiro.cpp  Mineiro.h  Montanha.cpp  Montanha.h  Operario.cpp  Operario.h  Pantano.cpp  Pantano.h  Pastagem.cpp  Pastagem.h  Poo_relatorio_meta2.docx  Serracao.cpp  Serracao.h  Trabalhador.cpp  Trabalhador.h  Zona.cpp  Zona.h  (+3 more)
Projects/TP_SO/: backend.c  backend.h  elementos_grupo.txt  env.c  env.h  frontend.c  frontend.h  geral.h  items.txt  makefile  promotores.txt  script.sh  users.txt
Projects/TP_TAC/: GAMEOVER.txt  (+10 more)
(+532 files in other folders)
