cmake_minimum_required(VERSION 3.20)
project(POO_tp_m1)

set(CMAKE_CXX_STANDARD 14)

add_executable(POO_tp_m1 main.cpp utils.cpp utils.h Ilha.cpp Ilha.h Deserto.cpp Deserto.h Controlador.cpp Controlador.h Mineiro.cpp Mineiro.h Pastagem.cpp Pastagem.h Floresta.cpp Floresta.h Montanha.cpp Montanha.h Pantano.cpp Pantano.h MinaFerro.cpp MinaFerro.h Zona.h Zona.cpp Trabalhador.cpp Trabalhador.h Operario.cpp Operario.h Lenhador.cpp Lenhador.h Edificio.cpp Edificio.h MinaCarvao.cpp MinaCarvao.h CentralEletrica.cpp CentralEletrica.h Bateria.cpp Bateria.h Fundicao.cpp Fundicao.h Serracao.cpp Serracao.h)
